@@ -1,0 +1,11 @@
+fileFormatVersion: 2
+guid: 12a60b3365a7d424cbc3f935bd1ed799
+MonoImporter:
+  externalObjects: {}
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
