@@ -5,7 +5,11 @@
         "Unity.Timeline",
         "Unity.Timeline.Editor",
         "Unity.Postprocessing.Runtime",
-        "Unity.Postprocessing.Editor"
+        "Unity.Postprocessing.Editor",
+        "Unity.RenderPipelines.Core.Runtime",
+        "Unity.RenderPipelines.Core.Editor",
+        "Unity.RenderPipelines.HighDefinition.Runtime",
+        "Unity.RenderPipelines.HighDefinition.Editor"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [
@@ -27,6 +31,11 @@
             "name": "com.unity.timeline",
             "expression": "0.0.0-builtin",
             "define": "CINEMACHINE_TIMELINE"
+        },
+        {
+            "name": "com.unity.render-pipelines.high-definition",
+            "expression": "5.3.1",
+            "define": "CINEMACHINE_POST_PROCESSING_V3"
         }
     ]
 }
