@@ -1,0 +1,11 @@
+fileFormatVersion: 2
+guid: 449ef5ebbe24720439ec31d15f7b6f3d
+MonoImporter:
+  externalObjects: {}
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {fileID: 2800000, guid: 5f2a108eb023faf43a809979fd3d38f2, type: 3}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
